# serializer version: 1
# name: test_graph_sequence[ascii]
  '''
              +-------------+              
              | PromptInput |              
              +-------------+              
                      *                    
                      *                    
                      *                    
             +----------------+            
             | PromptTemplate |            
             +----------------+            
                      *                    
                      *                    
                      *                    
              +-------------+              
              | FakeListLLM |              
              +-------------+              
                      *                    
                      *                    
                      *                    
     +--------------------------------+    
     | CommaSeparatedListOutputParser |    
     +--------------------------------+    
                      *                    
                      *                    
                      *                    
  +--------------------------------------+ 
  | CommaSeparatedListOutputParserOutput | 
  +--------------------------------------+ 
  '''
# ---
# name: test_graph_sequence[mermaid]
  '''
  %%{init: {'flowchart': {'curve': 'linear'}}}%%
  graph TD;
  	PromptInput[PromptInput]:::startclass;
  	PromptTemplate([PromptTemplate]):::otherclass;
  	FakeListLLM([FakeListLLM]):::otherclass;
  	CommaSeparatedListOutputParser([CommaSeparatedListOutputParser]):::otherclass;
  	CommaSeparatedListOutputParserOutput[CommaSeparatedListOutputParserOutput]:::endclass;
  	PromptInput --> PromptTemplate;
  	PromptTemplate --> FakeListLLM;
  	CommaSeparatedListOutputParser --> CommaSeparatedListOutputParserOutput;
  	FakeListLLM --> CommaSeparatedListOutputParser;
  	classDef startclass fill:#ffdfba;
  	classDef endclass fill:#baffc9;
  	classDef otherclass fill:#fad7de;
  
  '''
# ---
# name: test_graph_single_runnable[ascii]
  '''
  +----------------------+   
  | StrOutputParserInput |   
  +----------------------+   
              *              
              *              
              *              
     +-----------------+     
     | StrOutputParser |     
     +-----------------+     
              *              
              *              
              *              
  +-----------------------+  
  | StrOutputParserOutput |  
  +-----------------------+  
  '''
# ---
# name: test_graph_single_runnable[mermaid]
  '''
  %%{init: {'flowchart': {'curve': 'linear'}}}%%
  graph TD;
  	StrOutputParserInput[StrOutputParserInput]:::startclass;
  	StrOutputParser([StrOutputParser]):::otherclass;
  	StrOutputParserOutput[StrOutputParserOutput]:::endclass;
  	StrOutputParserInput --> StrOutputParser;
  	StrOutputParser --> StrOutputParserOutput;
  	classDef startclass fill:#ffdfba;
  	classDef endclass fill:#baffc9;
  	classDef otherclass fill:#fad7de;
  
  '''
# ---
